--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,9 @@
 }
 
 .bento-grid-card-heading {
-  @apply py-4 text-2xl font-medium tracking-tight text-gray-950 dark:text-white max-md:text-center
+  @apply py-4 text-2xl tracking-wide text-gray-950 dark:text-white max-md:text-center;
 }
-  
-.about-page-tech-logos-grid-svg {
-  @apply col-span-2 max-h-20 w-full object-contain lg:col-span-1;
+
+.bento-grid-card-subHeading {
+  @apply mt-2 max-w-lg text-base/6 text-gray-600 dark:text-gray-300 max-md:text-center;
 }
