--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 @import "tailwindcss";
 
 @custom-variant dark (&:where(.dark, .dark *));
+body {
+  font-family: "Outfit", sans-serif;
+}
 
 .bento-grid-card-outer-container {
   @apply relative flex h-full flex-col overflow-hidden;
