--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import 'highlight.js/styles/github.css';
 
 @import "tailwindcss";
 @plugin "@tailwindcss/typography";
@@ -22,4 +23,11 @@ body {
 
 .bento-grid-card-subHeading {
   @apply mt-2 max-w-lg text-base/6 text-gray-600 dark:text-gray-300 max-md:text-center;
+}
+
+pre {
+  @apply bg-gray-100 dark:bg-gray-600 rounded-none p-0.5 overflow-x-auto;
+}
+.hljs {
+  @apply text-sm;
 }
